# final-rl-model-6_13

./: .gitattributes  .gitignore  .pre-commit-config.yaml  0_QUANTRA_LIVE_COCKPIT.html  CHANGE_IMPACT.md  COUPLINGS.md  INSTRUCTIONS.md  README.md  REPO_MAP.md  pyproject.toml  requirements.txt
barbershop/: REMEDIATION_PLAN.md  __init__.py  adapter.py  config.py  conftest.py  contract.py  dashboard.py  data.py  doctor_chat.py  figures.py  risk_doctor.py  test_dashboard.py  test_risk_doctor.py
colab/: Quantra_Train.ipynb
docs/: 00_START_HERE.md  MLP_INTERPRETABILITY_LAYER.md  OPEN_QUESTIONS.md  PERPLEXITY_SPACE.md  PPO_ENGINE.md  PROJECT_GUIDE.md  REWARD_DESIGN.md  SCOPE_OF_WORK.md  SOW_2_BUILD_SPEC.md  STATE_VECTOR.md  THE_TRADING_CODE.md  wtf_are_you_talking_about.md
docs/architecture/: quantra_map.html
quantra/: __init__.py
quantra/constitution/: __init__.py  constitutional_rules.md  mission.md  safety_boundaries.md  update_rules.md
quantra/diagnostics/: __init__.py
quantra/env/: trading_env.py
quantra/ftmo_passing/: __init__.py  challenge_state.py
quantra/learning_system/: __init__.py
quantra/live_bridge/: __init__.py  live_runner.py  live_session.py
quantra/locked_core/: __init__.py
quantra/market_pipeline/: __init__.py
quantra/runtime/: __init__.py  __main__.py  autoscale.py  config.py  device.py  optimizer.py  throughput_benchmark.py  utilization_monitor.py
scripts/: emit_real_telemetry.py
tests/: conftest.py  test_data_pipeline.py  test_ftmo_master_suite.py  test_runtime.py
tools/: __init__.py  impact.py  snapshot.py
(+38 files in other folders)
